updated to the develop-branch-standard and added serviceclasses and updated changes I did days ago